[gd_scene load_steps=7 format=3 uid="uid://dxnakdkshmjf3"]

[ext_resource type="Script" path="res://Scripts/Player/GUI.gd" id="1_71x63"]
[ext_resource type="FontFile" uid="uid://d22luwsc6fmuu" path="res://Assets/Font/PixeloidSansBold-RpeJo.ttf" id="2_3x0x1"]
[ext_resource type="Texture2D" uid="uid://bv1k3d044twqw" path="res://Assets/ui_big_pieces.png" id="2_8opdj"]
[ext_resource type="PackedScene" uid="uid://d4cyoim416nt3" path="res://Scenes/Player/GUI/Inventory/Inventory.tscn" id="4_ds1yi"]
[ext_resource type="PackedScene" path="res://Scenes/Player/GUI/profile.tscn" id="5_ofeb3"]
[ext_resource type="PackedScene" uid="uid://m8xjjb0e3g1t" path="res://Scenes/Shop.tscn" id="6_0uiwo"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_71x63")

[node name="hp_bar_Sprite" type="Sprite2D" parent="."]
position = Vector2(124, 22.25)
scale = Vector2(3, 2.07143)
texture = ExtResource("2_8opdj")
region_enabled = true
region_rect = Rect2(259.999, 39.0266, 72.9705, 21.2155)

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = 42.0
offset_top = 8.0
offset_right = 203.0
offset_bottom = 37.0
value = 50.0
show_percentage = false

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 0
offset_left = 96.0
offset_top = 171.0
offset_right = 324.0
offset_bottom = 436.0
theme_override_constants/separation = 35

[node name="Profile" type="Button" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3x0x1")
theme_override_font_sizes/font_size = 18
text = "Profile"

[node name="InventoryButton" type="Button" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3x0x1")
theme_override_font_sizes/font_size = 18
disabled = true
text = "Inventory "

[node name="Inventory" parent="Container" instance=ExtResource("4_ds1yi")]
layout_mode = 1
offset_right = 280.0

[node name="Profile" parent="Container" instance=ExtResource("5_ofeb3")]
visible = false

[node name="Shop" parent="." instance=ExtResource("6_0uiwo")]
visible = false

[connection signal="pressed" from="Container/VBoxContainer/Profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
